Integer semi done 🔢